Addressing PR review comments

--- a/applications/sink/rsocket-sink/README.adoc
+++ b/applications/sink/rsocket-sink/README.adoc
@@ -11,6 +11,8 @@ The **$$rsocket$$** $$sink$$ has the following options:
 $$rsocket.consumer.host$$:: $$RSocket host.$$ *($$String$$, default: `$$localhost$$`)*
 $$rsocket.consumer.port$$:: $$RSocket port.$$ *($$Integer$$, default: `$$7000$$`)*
 $$rsocket.consumer.route$$:: $$Route used for RSocket.$$ *($$String$$, default: `$$<none>$$`)*
+$$rsocket.consumer.uri$$:: $$URI that can be used for websocket based transport.$$ *($$URI$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
+
 
 //end::ref-doc[]
