--- a/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/processors.adoc
+++ b/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/processors.adoc
@@ -3,6 +3,9 @@
 
 :leveloffset: +2
 
+[[spring-cloud-stream-modules-aggregator-processor]]
+include::{stream-apps-root}/{branch}/applications/processor/aggregator-processor/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-bridge-processor]]
 include::{stream-apps-root}/{branch}/applications/processor/bridge-processor/README.adoc[tags=ref-doc]
 
