--- a/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/sinks.adoc
+++ b/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/sinks.adoc
@@ -30,6 +30,9 @@ include::{stream-apps-root}/{branch}/applications/sink/mongodb-sink/README.adoc[
 [[spring-cloud-stream-modules-mqtt-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/mqtt-sink/README.adoc[tags=ref-doc]
 
+[[spring-cloud-stream-modules-pgcopy-sink]]
+include::{stream-apps-root}/{branch}/applications/sink/pgcopy-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-rabbit-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/rabbit-sink/README.adoc[tags=ref-doc]
 
@@ -38,6 +41,9 @@ include::{stream-apps-root}/{branch}/applications/sink/redis-sink/README.adoc[ta
 
 [[spring-cloud-stream-modules-router-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/router-sink/README.adoc[tags=ref-doc]
+
+[[spring-cloud-stream-modules-rsocket-sink]]
+include::{stream-apps-root}/{branch}/applications/sink/rsocket-sink/README.adoc[tags=ref-doc]
 
 [[spring-cloud-stream-modules-s3-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/s3-sink/README.adoc[tags=ref-doc]
