--- a/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/sources.adoc
+++ b/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/sources.adoc
@@ -27,6 +27,9 @@ include::{stream-apps-root}/{branch}/applications/source/jms-source/README.adoc[
 [[spring-cloud-stream-modules-load-generator-source]]
 include::{stream-apps-root}/{branch}/applications/source/load-generator-source/README.adoc[tags=ref-doc]
 
+[[spring-cloud-stream-modules-mail-source]]
+include::{stream-apps-root}/{branch}/applications/source/mail-source/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-mongodb-source]]
 include::{stream-apps-root}/{branch}/applications/source/mongodb-source/README.adoc[tags=ref-doc]
 
@@ -41,6 +44,9 @@ include::{stream-apps-root}/{branch}/applications/source/s3-source/README.adoc[t
 
 [[spring-cloud-stream-modules-sftp-source]]
 include::{stream-apps-root}/{branch}/applications/source/sftp-source/README.adoc[tags=ref-doc]
+
+[[spring-cloud-stream-modules-syslog-source]]
+include::{stream-apps-root}/{branch}/applications/source/syslog-source/README.adoc[tags=ref-doc]
 
 [[spring-cloud-stream-modules-tcp-source]]
 include::{stream-apps-root}/{branch}/applications/source/tcp-source/README.adoc[tags=ref-doc]
