Refactor hardcoded versions in functions submodule branches
This is so they can be updated in a minimal amount of places and leverage the maven hierarchy to propagate them where appropriate.
While working with SNAPSHOT releases of Spring Boot, Spring Integration, and Spring Cloud, it required touching every pom.xml file
in order to reflect the use of the SNAPSHOT. After this change, it will only be required to change the property in the top
functions pom.xml and the versions will reflect to all submodules.

Maven introduced the ability use a key property, revision to propagate this information to the <parent> declarations in each pom.

This was enabled in Maven 3.5+
https://maven.apache.org/maven-ci-friendly.html

--- a/functions/function/image-recognition-function/README.adoc
+++ b/functions/function/image-recognition-function/README.adoc
@@ -25,7 +25,7 @@ Add the `image-recognition` dependency to the pom (use the latest version availa
 <dependency>
     <groupId>org.springframework.cloud.fn</groupId>
     <artifactId>image-recognition-function</artifactId>
-    <version>${spring-cloud-fn.version}</version>
+    <version>${revision}</version>
 </dependency>
 ----
 
