--- a/functions/common/tensorflow-common/README.adoc
+++ b/functions/common/tensorflow-common/README.adoc
@@ -11,7 +11,7 @@ Quick Start: just add the following dependency:
     <dependency>
         <groupId>org.springframework.cloud.fn</groupId>
         <artifactId>tensorflow-common</artifactId>
-        <version>${spring-cloud-fn.version}</version>
+        <version>${revision}</version>
     </dependency>
 ----
 
