--- a/functions/function/semantic-segmentation-function/README.adoc
+++ b/functions/function/semantic-segmentation-function/README.adoc
@@ -26,13 +26,13 @@ Add the `semantic-segmentation` dependency to your pom (_use the latest version 
 <dependency>
     <groupId>org.springframework.cloud.fn</groupId>
     <artifactId>semantic-segmentation-function</artifactId>
-    <version>${spring-cloud-fn.version}</version>
+    <version>${revision}</version>
 </dependency>
 
 <dependency>
     <groupId>org.springframework.cloud.fn</groupId>
     <artifactId>object-detection-function</artifactId>
-    <version>${spring-cloud-fn.version}</version>
+    <version>${revision}</version>
 </dependency>
 ----
 
